Password Safe 3.0Beta1 Release Note - March 2005
================================================

This note describe the new features, fixed bugs and known problems
with Password Safe version 3.0Beta1. For a short description of Password
Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.


New Features for 3.0Beta1:
==========================
[731841] Database format is changed to use newer encryption algorithm (Twofish
replaces Blowfish). Also, the integrity of the database is now checked.
[] Entry creation time is now stored.
[1393632] URL and Autotype moved from Notes to their own fields.
[] System Tray icon now indicated if database is locked or not (Thanks to
DK for this cool feature!)
[1422761] System Tray menu now has a list of recently used entries - a
convenient shortcut to common entries. Thanks to Ork for suggesting this,
and to DK for the implementation!
[] Add and Edit dialog box now have "simple" and "detailed" modes. Thanks
to Dave Collins for implementing this.

Bugs fixed in 3.0Beta1:
=======================
[1384738] Backspace is no longer used instead of dots in the title for the
plaintext import/export format.

Known Problems:
===============
[] No major problems are known in this release. However, it is a FIRST BETA 
release, and should NOT be used on real databases without backups!
[] Online help has not been updated