@@ -2,6 +2,7 @@
 //-----------------------------------------------------------------------------
 
 void  SetPasswordFont(CWnd* pDlgItem);
+void ReleasePasswordFont();
 
 //-----------------------------------------------------------------------------
 // Local variables:
