@@ -54,7 +54,11 @@ void CUUIDGen::GetUUID(uuid_array_t &uuid_array) const
 
 void CUUIDGen::GetUUIDStr(uuid_str_t &str) const
 {
+#if _MSC_VER >= 1400
+  sprintf_s((char *)str, 36,
+#else
   sprintf((char *)str,
+#endif
 	  "%08x-%04x-%04x-%02x%02x-%02x%02x%02x%02x%02x%02x",
 	  uuid.Data1, uuid.Data2, uuid.Data3,
 	  (unsigned char) uuid.Data4[0], (unsigned char) uuid.Data4[1],
