@@ -1,13 +1,16 @@
-Password Safe 3.0Beta1 Release Note - March 2005
+Password Safe 3.0Beta2 Release Note - March 2005
 ================================================
 
 This note describe the new features, fixed bugs and known problems
-with Password Safe version 3.0Beta1. For a short description of Password
+with Password Safe version 3.0Beta2. For a short description of Password
 Safe, please see the accompanying README.txt file. For more
 information on the product and the project, please visit
 http://passwordsafe.sourceforge.net. Details about changes to previous
 releases may be found in the file ChangeLog.txt.
 
+Bugs fixed in 3.0Beta2:
+=======================
+[1450484] Trialing garbage in tooltip text fixed (DK).
 
 New Features for 3.0Beta1:
 ==========================
